<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Fragment.RateCartFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="@dimen/_15sdp"
            android:paddingVertical="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/ic_left_arraow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/rate_card"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/back_btn"
                app:layout_constraintEnd_toStartOf="@+id/support"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toBottomOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="@id/back_btn" />

            <ImageView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_support"
                android:layout_marginEnd="@dimen/_5sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/profile"
                app:layout_constraintEnd_toStartOf="@+id/help_txt"
                app:layout_constraintTop_toTopOf="@id/profile" />

            <TextView
                android:id="@+id/help_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/help"
                android:visibility="gone"
                android:textColor="#0F6FB5"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/support"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/support" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/txt_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/zone"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout" />


        <TextView
            android:id="@+id/txt_Address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/rajeev_chauk_blue_ford_market_new_delhi"
            android:textAllCaps="false"
            android:textColor="#686868"
            android:textSize="14sp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_zone"
            app:layout_constraintTop_toBottomOf="@id/txt_zone" />

        <TextView
            android:id="@+id/txt_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/monday_sunday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="@id/txt_Address"
            app:layout_constraintTop_toBottomOf="@id/txt_Address" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_payout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/payout"
            android:layout_marginTop="@dimen/_14sdp"
            android:paddingVertical="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/txt_day"
            android:layout_marginHorizontal="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payout_for_00_00am_23_59_pm"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#F1F1F1"
            app:layout_constraintStart_toStartOf="@id/layout_payout"
            app:layout_constraintEnd_toEndOf="@id/layout_payout"
            app:layout_constraintTop_toBottomOf="@id/layout_payout">

            <TextView
                android:id="@+id/txt_base_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/base_fare"
                android:fontFamily="@font/inter_bold"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/txt_rs_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/_16"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="@id/txt_base_fare" />

            <View
                android:id="@+id/view_base_fare"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DFDFDF"
                app:layout_constraintStart_toStartOf="@id/txt_base_fare"
                app:layout_constraintEnd_toEndOf="@id/txt_rs_16"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/txt_base_fare" />


            <TextView
                android:id="@+id/txt_minimum_fare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/minimum_fare"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="@id/txt_base_fare"
                app:layout_constraintTop_toBottomOf="@id/view_base_fare" />

            <TextView
                android:id="@+id/txt_rs_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="₹20"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintTop_toTopOf="@id/txt_minimum_fare"
                app:layout_constraintStart_toStartOf="@id/txt_rs_16" />


            <View
                android:id="@+id/view_minimum_fare"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DFDFDF"
                app:layout_constraintStart_toStartOf="@id/txt_base_fare"
                app:layout_constraintEnd_toEndOf="@id/txt_rs_16"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/txt_minimum_fare" />


            <TextView
                android:id="@+id/txt_Earning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/earning_per_km"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="@dimen/_9sdp"
                app:layout_constraintStart_toStartOf="@id/txt_minimum_fare"
                app:layout_constraintTop_toBottomOf="@id/view_minimum_fare" />


            <TextView
                android:id="@+id/txt_price_per_minitus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/price_per_minute"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintTop_toBottomOf="@id/txt_Earning"
                app:layout_constraintStart_toStartOf="@id/txt_Earning" />


            <TextView
                android:id="@+id/txt_rs_0.8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/_0_8"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintTop_toTopOf="@id/txt_price_per_minitus"
                app:layout_constraintStart_toStartOf="@id/txt_rs_20" />


            <View
                android:id="@+id/view_price_per"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DFDFDF"
                app:layout_constraintStart_toStartOf="@id/txt_base_fare"
                app:layout_constraintEnd_toEndOf="@id/txt_rs_16"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/txt_price_per_minitus" />


            <TextView
                android:id="@+id/txt_platform_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/platform_charges"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/view_price_per"
                app:layout_constraintStart_toStartOf="@id/txt_price_per_minitus" />


            <TextView
                android:id="@+id/txt_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/_18"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintTop_toTopOf="@id/txt_platform_charges"
                app:layout_constraintStart_toStartOf="@id/txt_rs_0.8" />


            <View
                android:id="@+id/view_platform_charge"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#DFDFDF"
                app:layout_constraintStart_toStartOf="@id/txt_base_fare"
                app:layout_constraintEnd_toEndOf="@id/txt_rs_16"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/txt_platform_charges" />


            <TextView
                android:id="@+id/txt_pickup_Extra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/pickup_extra_km_fare_post_2_km_max_12"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintEnd_toStartOf="@id/txt_km"
                android:layout_marginEnd="@dimen/_26sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_17sdp"
                app:layout_constraintStart_toStartOf="@id/txt_platform_charges"
                app:layout_constraintTop_toBottomOf="@id/view_platform_charge" />


            <TextView
                android:id="@+id/txt_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:text="@string/_4_km"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintTop_toTopOf="@id/txt_pickup_Extra"
                app:layout_constraintEnd_toEndOf="@id/txt_percentage" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>