<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.HomeFragment">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/location_screen"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/menu_add"
                    app:layout_constraintTop_toBottomOf="@id/button_Location"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_Alert_dialogbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/alert_dialogbox"
                    app:layout_constraintTop_toBottomOf="@id/button_menu"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_multiple_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/multiple_order"
                    app:layout_constraintTop_toBottomOf="@id/button_Alert_dialogbox"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_Add_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/add_menu"
                    app:layout_constraintTop_toBottomOf="@id/button_multiple_order"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_new_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/new_add"
                    app:layout_constraintTop_toBottomOf="@id/button_Add_menu"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_order_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/order_list"
                    app:layout_constraintTop_toBottomOf="@id/button_new_add"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_pickuplocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="Pick Up Location"
                    app:layout_constraintTop_toBottomOf="@id/button_order_list"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/orange_button_background" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_exact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_bold"
                    android:text="Exact Address"
                    app:layout_constraintTop_toBottomOf="@id/button_pickuplocation"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:background="@drawable/orange_button_background" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>